# vegafem-windows

./: CMakeLists.txt  README.md
include/: fftw3-mpi.h  fftw3-mpi_mkl.h  fftw3_mkl.h  fftw3_mkl_f77.h  fftw_mpi.h  i_malloc.h  mkl.h  mkl_blacs.h  mkl_blas.h  mkl_blas_stdcall.h  mkl_cblas.h  mkl_cdft.h  mkl_cdft_types.h  mkl_cluster_sparse_solver.h  mkl_df.h  mkl_df_defines.h  mkl_df_functions.h  mkl_df_types.h  mkl_dfti.h  mkl_direct_blas.h  mkl_direct_call.h  mkl_dss.h  mkl_lapack.h  mkl_lapack_stdcall.h  mkl_lapacke.h  mkl_pardiso.h  mkl_pblas.h  mkl_poisson.h  mkl_rci.h  mkl_scalapack.h  mkl_service.h  mkl_solvers_ee.h  mkl_solvers_ee_stdcall.h  mkl_sparse_handle.h  mkl_spblas.h  mkl_spblas_stdcall.h  mkl_trans.h  mkl_trig_transforms.h  mkl_types.h  mkl_vml.h  (+7 more)
src/: CMakeLists.txt  CMakeLists.txt.bak
src/libcamera/: CMakeLists.txt  CMakeLists.txt.bak
src/libclothBW/: CMakeLists.txt
src/libconfigFile/: CMakeLists.txt
src/libcorotationalLinearFEM/: CMakeLists.txt
src/libelasticForceModel/: CMakeLists.txt
src/libforceModel/: CMakeLists.txt
src/libgetopts/: CMakeLists.txt
src/libglslPhong/: CMakeLists.txt
src/libgraph/: CMakeLists.txt
src/libhashTable/: CMakeLists.txt
src/libimageIO/: CMakeLists.txt
src/libinsertRows/: CMakeLists.txt
src/libintegrator/: CMakeLists.txt
src/libintegratorDense/: CMakeLists.txt  CMakeLists.txt.bak
src/libintegratorSparse/: CMakeLists.txt
src/libisotropicHyperelasticFEM/: CMakeLists.txt
src/libobjMeshGPUDeformer/: CMakeLists.txt  CMakeLists.txt.bak  objMeshGPUDeformer.cpp  objMeshGPUDeformer.h
(+45 files in other folders)
